<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="22sp"
                    android:text="@string/textTeamA" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:layout_alignParentRight="true"
                    android:text="0" />

                <TextView
                    android:id="@+id/teamARedCardDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

                <TextView
                    android:id="@+id/teamAYellowCardDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_bellow="@id/teamARedCardDisplay"
                    android:text="0"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/teamAGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/teamACornerKick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/cornerkick" />

                <Button
                    android:id="@+id/teamAGoalKick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/goalkick" />

                <Button
                    android:id="@+id/teamAThrowIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/throwin" />

                <Button
                    android:id="@+id/teamAOffSide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/offside" />

                <Button
                    android:id="@+id/teamAFoul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/foul" />

                <Button
                    android:id="@+id/teamAYellowCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/yellowcard" />

                <Button
                    android:id="@+id/teamARedCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/redcard" />
            </LinearLayout>


            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="22sp"
                    android:text="@string/textTeamB" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:textSize="36sp"
                    android:text="0" />
                </RelativeLayout>

                <Button
                    android:id="@+id/teamBGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/teamBCornerKick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/cornerkick" />

                <Button
                    android:id="@+id/teamBGoalKick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/goalkick" />

                <Button
                    android:id="@+id/teamBThrowIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/throwin" />

                <Button
                    android:id="@+id/teamBOffSide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/offside" />

                <Button
                    android:id="@+id/teamBFoul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/foul" />

                <Button
                    android:id="@+id/teamBYellowCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/yellowcard" />

                <Button
                    android:id="@+id/teamBRedCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/redcard" />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="reset"
        android:text="@string/reset" />
</RelativeLayout>